# agentic-shopping-assistant

./: LICENSE  README.md  agentic_shopping_assistant.ipynb  agentic_shopping_assistant.py  jupytext.toml  pyproject.toml
prompts/: coding-user-prompt-template.txt
