[project]
name = "agentic-shopping-assistant"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.2",
    "langchain>=1.1.3",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.3",
    "mcp>=1.23.3",
    "openai>=2.8.1",
    "pip>=25.3",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.0.0",
]
